Visitor/PrimerPasoParser.java
// Generated from PrimerPaso.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrimerPasoParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, OPERATOR_NOT=5, OPERATOR_AND=6, OPERATOR_OR=7, 
		OPERATOR_EQU=8, OPERATOR_DIFF=9, OPERATOR_GRT=10, OPERATOR_LOT=11, OPERATOR_GRE=12, 
		OPERATOR_LOE=13, OPERATOR_POW=14, OPERATOR_MULT=15, OPERATOR_DIV=16, OPERATOR_NEG=17, 
		OPERATOR_ADD=18, L_PARENTHESIS=19, R_PARENTHESIS=20, L_BRACE=21, R_BRACE=22, 
		L_BRACKET=23, R_BRACKET=24, DELIMITER=25, COMMA=26, FUNC_UPPERCASE=27, 
		FUNC_LEN=28, FUNC_AMOUNT=29, FUNC_TOSTRING=30, FUNC_TOINT=31, FUNC_PRINT=32, 
		FUNC_MAIN=33, FUNC_POW=34, FUNC_ISDIGIT=35, FUNC_SORTASC=36, FUNC_SORTDES=37, 
		FUNC_CHARAT=38, FUNC_HIGHER=39, FUNC_LESS=40, FUNC_DIVIDE=41, FUNC_CHANGE=42, 
		FUNC_REPLACE=43, FUNC_CONTAINS=44, FUNC_ISEMPTY=45, FUNC_COMPARESTRING=46, 
		FUNC_COMPARECHAR=47, VOID=48, RETURN=49, IF=50, ELSE=51, DO=52, DOWHILE=53, 
		WHILE=54, FOR=55, OPERATOR_ASSIG=56, ID=57, INLINE_COMMENT=58, WS=59, 
		CHARACTER=60, STRING=61, INTEGER=62, BOOLEAN=63, ARRAY=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'bool'", "'letra'", "'entero'", "'hilera'", "'!'", "'y'", 
		"'o'", "'=='", "'!='", "'>'", "'<'", "'<='", "'>='", "'^'", "'*'", "'/'", 
		"'-'", "'+'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
		"'.mayuscula'", "'.largo'", "'.cantidad'", "'.aHilera'", "'.aNumero'", 
		"'imprimir'", "'principal'", "'potencia'", "'esDigito'", "'.ordenarAsc'", 
		"'.ordenarDes'", "'.caracterEn'", "'.mayor'", "'.menor'", "'.dividir'", 
		"'.cambiar'", "'.reemplazar'", "'.contiene'", "'.esVacia'", "'compararHileras'", 
		"'compararLetra'", "'nada'", "'retorna'", "'si'", "'sino'", "'haga'", 
		"'mientras'", "'por mientras'", "'para cada'", "'='", "ID", "INLINE_COMMENT", 
		"WS", "CHARACTER", "STRING", "INTEGER", "BOOLEAN", "ARRAY"
	};
	public static final int
		RULE_expression = 0, RULE_element = 1, RULE_literal = 2, RULE_id_decl = 3, 
		RULE_func_call = 4, RULE_var_call = 5, RULE_inputs = 6, RULE_input = 7, 
		RULE_var_decl = 8, RULE_data_type = 9, RULE_type_int = 10, RULE_type_char = 11, 
		RULE_type_bool = 12, RULE_type_string = 13, RULE_type_void = 14, RULE_result = 15, 
		RULE_if_conditional = 16, RULE_params = 17, RULE_param = 18, RULE_block = 19, 
		RULE_dowhile_def = 20, RULE_while_def = 21, RULE_do_def = 22, RULE_for_def = 23, 
		RULE_function_def = 24, RULE_isDigit_def = 25, RULE_sortAsc_def = 26, 
		RULE_sortDes_def = 27, RULE_higher_def = 28, RULE_less_def = 29, RULE_divide_def = 30, 
		RULE_change_def = 31, RULE_replace_def = 32, RULE_contains_def = 33, RULE_isEmpty_def = 34, 
		RULE_compareString_def = 35, RULE_amount_def = 36, RULE_main_def = 37, 
		RULE_length_def = 38, RULE_power_def = 39, RULE_print_def = 40, RULE_uppercase_def = 41, 
		RULE_program = 42, RULE_sentence = 43, RULE_string_sentence = 44, RULE_array_sentence = 45;
	public static final String[] ruleNames = {
		"expression", "element", "literal", "id_decl", "func_call", "var_call", 
		"inputs", "input", "var_decl", "data_type", "type_int", "type_char", "type_bool", 
		"type_string", "type_void", "result", "if_conditional", "params", "param", 
		"block", "dowhile_def", "while_def", "do_def", "for_def", "function_def", 
		"isDigit_def", "sortAsc_def", "sortDes_def", "higher_def", "less_def", 
		"divide_def", "change_def", "replace_def", "contains_def", "isEmpty_def", 
		"compareString_def", "amount_def", "main_def", "length_def", "power_def", 
		"print_def", "uppercase_def", "program", "sentence", "string_sentence", 
		"array_sentence"
	};

	@Override
	public String getGrammarFileName() { return "PrimerPaso.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrimerPasoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode OPERATOR_LOE() { return getToken(PrimerPasoParser.OPERATOR_LOE, 0); }
		public TerminalNode OPERATOR_GRE() { return getToken(PrimerPasoParser.OPERATOR_GRE, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public TerminalNode OPERATOR_DIV() { return getToken(PrimerPasoParser.OPERATOR_DIV, 0); }
		public TerminalNode OPERATOR_LOT() { return getToken(PrimerPasoParser.OPERATOR_LOT, 0); }
		public TerminalNode OPERATOR_NOT() { return getToken(PrimerPasoParser.OPERATOR_NOT, 0); }
		public TerminalNode ID() { return getToken(PrimerPasoParser.ID, 0); }
		public TerminalNode OPERATOR_EQU() { return getToken(PrimerPasoParser.OPERATOR_EQU, 0); }
		public TerminalNode OPERATOR_NEG() { return getToken(PrimerPasoParser.OPERATOR_NEG, 0); }
		public TerminalNode OPERATOR_MULT() { return getToken(PrimerPasoParser.OPERATOR_MULT, 0); }
		public Array_sentenceContext array_sentence() {
			return getRuleContext(Array_sentenceContext.class,0);
		}
		public TerminalNode OPERATOR_POW() { return getToken(PrimerPasoParser.OPERATOR_POW, 0); }
		public TerminalNode OPERATOR_ADD() { return getToken(PrimerPasoParser.OPERATOR_ADD, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode OPERATOR_GRT() { return getToken(PrimerPasoParser.OPERATOR_GRT, 0); }
		public TerminalNode OPERATOR_DIFF() { return getToken(PrimerPasoParser.OPERATOR_DIFF, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public String_sentenceContext string_sentence() {
			return getRuleContext(String_sentenceContext.class,0);
		}
		public TerminalNode STRING() { return getToken(PrimerPasoParser.STRING, 0); }
		public TerminalNode OPERATOR_OR() { return getToken(PrimerPasoParser.OPERATOR_OR, 0); }
		public TerminalNode OPERATOR_AND() { return getToken(PrimerPasoParser.OPERATOR_AND, 0); }
		public TerminalNode ARRAY() { return getToken(PrimerPasoParser.ARRAY, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(93); match(OPERATOR_NEG);
				setState(94); expression(10);
				}
				break;

			case 2:
				{
				setState(95); match(OPERATOR_NOT);
				setState(96); expression(5);
				}
				break;

			case 3:
				{
				setState(97); element();
				}
				break;

			case 4:
				{
				setState(98);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==STRING) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(99); string_sentence();
				}
				break;

			case 5:
				{
				setState(100);
				_la = _input.LA(1);
				if ( !(_la==ID || _la==ARRAY) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(101); array_sentence();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(122);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(104);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(105); match(OPERATOR_POW);
						setState(106); expression(9);
						}
						break;

					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(107);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(108);
						_la = _input.LA(1);
						if ( !(_la==OPERATOR_MULT || _la==OPERATOR_DIV) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(109); expression(9);
						}
						break;

					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(110);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(111);
						_la = _input.LA(1);
						if ( !(_la==OPERATOR_NEG || _la==OPERATOR_ADD) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(112); expression(8);
						}
						break;

					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(113);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(114);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPERATOR_EQU) | (1L << OPERATOR_DIFF) | (1L << OPERATOR_GRT) | (1L << OPERATOR_LOT) | (1L << OPERATOR_GRE) | (1L << OPERATOR_LOE))) != 0)) ) {
						_errHandler.recoverInline(this);
						}
						consume();
						setState(115); expression(7);
						}
						break;

					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(116);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(117); match(OPERATOR_AND);
						setState(118); expression(5);
						}
						break;

					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(119);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(120); match(OPERATOR_OR);
						setState(121); expression(4);
						}
						break;
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		try {
			setState(133);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127); match(L_PARENTHESIS);
				setState(128); expression(0);
				setState(129); match(R_PARENTHESIS);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); func_call();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132); literal();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(PrimerPasoParser.BOOLEAN, 0); }
		public TerminalNode CHARACTER() { return getToken(PrimerPasoParser.CHARACTER, 0); }
		public TerminalNode ID() { return getToken(PrimerPasoParser.ID, 0); }
		public TerminalNode STRING() { return getToken(PrimerPasoParser.STRING, 0); }
		public TerminalNode INTEGER() { return getToken(PrimerPasoParser.INTEGER, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID) | (1L << CHARACTER) | (1L << STRING) | (1L << INTEGER) | (1L << BOOLEAN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_declContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PrimerPasoParser.ID, 0); }
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Id_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterId_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitId_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitId_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Id_declContext id_decl() throws RecognitionException {
		Id_declContext _localctx = new Id_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); data_type();
			setState(138); match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public InputsContext inputs() {
			return getRuleContext(InputsContext.class,0);
		}
		public TerminalNode ID() { return getToken(PrimerPasoParser.ID, 0); }
		public TerminalNode DELIMITER() { return getToken(PrimerPasoParser.DELIMITER, 0); }
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(ID);
			setState(141); match(L_PARENTHESIS);
			setState(143);
			_la = _input.LA(1);
			if (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & ((1L << (OPERATOR_NOT - 5)) | (1L << (OPERATOR_NEG - 5)) | (1L << (L_PARENTHESIS - 5)) | (1L << (ID - 5)) | (1L << (CHARACTER - 5)) | (1L << (STRING - 5)) | (1L << (INTEGER - 5)) | (1L << (BOOLEAN - 5)) | (1L << (ARRAY - 5)))) != 0)) {
				{
				setState(142); inputs();
				}
			}

			setState(145); match(R_PARENTHESIS);
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(146); match(DELIMITER);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_callContext extends ParserRuleContext {
		public TerminalNode OPERATOR_ASSIG() { return getToken(PrimerPasoParser.OPERATOR_ASSIG, 0); }
		public TerminalNode ID() { return getToken(PrimerPasoParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DELIMITER() { return getToken(PrimerPasoParser.DELIMITER, 0); }
		public Var_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterVar_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitVar_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitVar_call(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_callContext var_call() throws RecognitionException {
		Var_callContext _localctx = new Var_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149); match(ID);
			setState(150); match(OPERATOR_ASSIG);
			setState(151); expression(0);
			setState(152); match(DELIMITER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputsContext extends ParserRuleContext {
		public List<InputContext> input() {
			return getRuleContexts(InputContext.class);
		}
		public InputContext input(int i) {
			return getRuleContext(InputContext.class,i);
		}
		public InputsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterInputs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitInputs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitInputs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputsContext inputs() throws RecognitionException {
		InputsContext _localctx = new InputsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inputs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); input();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(155); match(COMMA);
				setState(156); input();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrimerPasoListener ) ((PrimerPasoListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PrimerPasoVisitor ) return ((PrimerPasoVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
